updated markdown cheatsheet - added youtube markdown

--- a/pages/Misc/Markdown_Cheat_Sheet.mdx
+++ b/pages/Misc/Markdown_Cheat_Sheet.mdx
@@ -165,3 +165,9 @@ H~2~O
 
 X^2^  
 ```X^2^```
+
+### YouTube
+
+[![LoFi Simpsons](https://img.youtube.com/vi/25BkVBgFD9Y/0.jpg)](https://www.youtube.com/watch?v=25BkVBgFD9Y)
+```[![Image alt text](https://img.youtube.com/vi/YOUTUBE-ID/0.jpg)](https://www.youtube.com/watch?v=YOUTUBE-ID)```
+
