updated cloud resouce comparisons

--- a/pages/Certifications/Cloud_Resource_Comparision.mdx
+++ b/pages/Certifications/Cloud_Resource_Comparision.mdx
@@ -14,10 +14,10 @@
 | **Container Orchestration** |	EKS - Elastic Kubernetes Service | AKS - Azure Kubernetes Service | GKE - Google Kubernetes Engine |
 | **Messaging/Queue Service** |	SQS and SNS | Event Grid and Event Hub | Pub/Sub |
 | **Cheapest VM Type** | Spot Instances |   | Preemptible VMs |
-| **CDN** |	CloudFront |  | Cloud CDN |
-| **Mountable File Share** | EBS |  | Cloud Filestore |
+| **CDN** |	CloudFront | Front Door | Cloud CDN |
+| **Mountable File Share** | EBS | SMB File Share | Cloud Filestore |
 | **Data Pipeline** |  | Azure DataFactory | Cloud Data Fusion |
-| **Managed Server Side Website Builder/Service** |	AWS Amplify |  | App Engine |
+| **Managed Server Side Website Builder/Service** |	AWS Amplify | Azure Web App | App Engine |
 | **Total Cost of Ownership Tool** |  |  |  |			
-| **Pricing Calculator** | [Pricing Calculator](https://calculator.aws/#/) |	[Pricing Calculator](https://azure.microsoft.com/en-us/pricing/calculator/) | [Pricing Calculator](https://cloud.google.com/products/calculator) |
+| **Pricing Calculator** | [Pricing Calculator](https://calculator.aws/#/) | [Pricing Calculator](https://azure.microsoft.com/en-us/pricing/calculator/) | [Pricing Calculator](https://cloud.google.com/products/calculator) |
 | **IaC** | CloudFormation | Azure Resource Manager (ARM) | Google Cloud Deployment Manager + Terraform |
