fixed typo, lamba -> lambda

--- a/pages/Certifications/Cloud_Resource_Comparision.mdx
+++ b/pages/Certifications/Cloud_Resource_Comparision.mdx
@@ -4,7 +4,7 @@
 | **Data Warehouse** | RDS | DataLake |	BigQuery |
 | **Object Storage** |	S3 | Container | Cloud Storage |
 | **SQL DB** | RDS | MySQL | Cloud SQL |
-| **Serverless Compute** | Lamba | Functions (aka Function Apps) |	Cloud Functions |
+| **Serverless Compute** | Lambda | Functions (aka Function Apps) |	Cloud Functions |
 | **Long Term Storage** | Glacier |	Archive | Archive |
 | **Infrequent (< 30 days) Access Storage** | IA S3 | Cool | Nearline |
 | **Infrequent (> 30 days) Access Storage** |   | Coldline |
