added node libraries

--- a/pages/node.js/Libraries_I_Use.mdx
+++ b/pages/node.js/Libraries_I_Use.mdx
@@ -1,9 +1,9 @@
 | Library Name | Reference Page | Use Case | Notes |
-| ----------- | ----------- | ----------- | ----------- |
+| ----------- | :-----------: | ----------- | ----------- |
 | Google Tag Manager | [Source](https://www.npmjs.com/package/@analytics/google-tag-manager) | Intalling GTM tags on your app | This also installs the Analytics library which lets you manage analytics events directly on your app |
-| Bootstrap JS |  |  |	 |
-|  |  |  |  |
-|  |  |  |  |
+| Bootstrap JS | [Source](https://www.npmjs.com/package/bootstrapjs) | Solid CSS Framework |	 |
+| Axios | [Source](https://www.npmjs.com/package/axios) | Make HTTP Requests |  |
+| OpenAI | [Source](https://www.npmjs.com/package/openai) | Integrate with ChatGPT API |  |
 |  |  |  |  |
 |  |  |  |  |
 |  |  |  |  |
