Added syntax highlighting to JS Code Snippet

--- a/pages/Artificial_Intelligence/ChatGPT/ChatGPT_Reference_Guide.mdx
+++ b/pages/Artificial_Intelligence/ChatGPT/ChatGPT_Reference_Guide.mdx
@@ -14,7 +14,7 @@ To change the value of the "model" parameter, you simply need to specify the nam
 
 Example Code:
 
-```
+```js filename="chatGPT.js" {13} copy
 const {Configuration,OpenAIApi} = require("openai");
 require('dotenv').config()
 
