Renamed Bash section to Scripting and added Regex reference page

--- a/pages/Scripting/Bash_Commands.mdx
+++ b/pages/Scripting/Bash_Commands.mdx
@@ -1,3 +1,5 @@
+# (Useful) Bash Commands
+
 | Command | What it does | Usage Example | Use case | References | Notes |
 | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |
 | **find** | Finds files by filename | ``` find image.png ``` | Looking for specific files in  node libraries |  |  |
