--- a/pages/Artificial_Intelligence/References.mdx
+++ b/pages/Artificial_Intelligence/References.mdx
@@ -7,7 +7,7 @@
 | 3 | **AutoGPT** | [Source](https://github.com/Torantulino/Auto-GPT) | Open Source GPT 4 tool | Can give instructions to run continuously and autonomously |
 | 4 | **AutoGPT** | [![Image alt text](https://img.youtube.com/vi/m6TwUf0seS8/0.jpg)](https://www.youtube.com/watch?v=m6TwUf0seS8)| Overview video of AutoGPT |  |
 | 5 | **ElevenLabs** | [Link](https://beta.elevenlabs.io/) | Voice over for AI Responses |Can integrate with application using ChatGPT API to return voice responses for queries |
-| 6 | ** ** |  |  |  |
+| 6 | **ElevenLabs** | [Documentation](https://api.elevenlabs.io/docs) | API Reference Document |  |
 | 7 | ** ** |  |  |	 |
 | 8 | ** ** |  |  |  |
 | 9 | ** ** |  |  |	 |
