fixed some theme stuff, added in callouts on stub pages

--- a/pages/Artificial_Intelligence/References.mdx
+++ b/pages/Artificial_Intelligence/References.mdx
@@ -1,3 +1,10 @@
+import { Callout } from 'nextra-theme-docs'
+ 
+<Callout emoji="👾">
+  **Space Invaders** is a 1978 shoot 'em up arcade game developed by Tomohiro
+  Nishikado.
+</Callout>
+
 # References
 
 | No. | **What?** | **Where?** | **Why?** |	**Notes** |
