--- a/pages/Platforms/postachio.mdx
+++ b/pages/Platforms/postachio.mdx
@@ -1,3 +1,9 @@
+import { Callout } from 'nextra-theme-docs'
+ 
+<Callout type="warning" emoji="⚠️">
+  This is a Stub.
+</Callout>
+
 # Postach.io
 
 ## What is postach.io
