--- a/pages/Querying/KQL.mdx
+++ b/pages/Querying/KQL.mdx
@@ -1,3 +1,9 @@
+import { Callout } from 'nextra-theme-docs'
+ 
+<Callout type="warning" emoji="⚠️">
+  This is a Stub.
+</Callout>
+
 # KQL aka Kusto
 
 ## Azure db query language
