--- a/pages/Scripting/Regex.mdx
+++ b/pages/Scripting/Regex.mdx
@@ -1,3 +1,9 @@
+import { Callout } from 'nextra-theme-docs'
+ 
+<Callout type="warning" emoji="⚠️">
+  This is a Stub.
+</Callout>
+
 # Regex
 
 | Regex | What it does | Usage Example | Use case | References | Notes |
