updated dp-203 notes

--- a/pages/Certifications/Azure/Azure_Data_Engineer_Associate_Info.mdx
+++ b/pages/Certifications/Azure/Azure_Data_Engineer_Associate_Info.mdx
@@ -6,7 +6,8 @@ My general strategy was to go through all the training materials and immediately
 a free set of practice questions or take a practice test. Then I would review my practice test,
 add to my notes and rinse and repeat until I was consistently getting a passing score.
 **NOTE:** The Azure Practice assessment can just be refreshed to see a new batch of questions, so 
-you should take that several times before starting the Udemy practice exams.
+you should take that several times before starting the Udemy practice exams. Also, the 275 free 
+practice exam questions are taken from previous exams, very helpful.
 ```
 
 [Certification Details](https://learn.microsoft.com/en-us/certifications/exams/dp-203/)  
@@ -24,6 +25,7 @@ you should take that several times before starting the Udemy practice exams.
 | [Implement a Data Streaming Solution with Azure Stream Analytics](https://learn.microsoft.com/en-us/training/paths/implement-data-streaming-with-asa/) | 3 Hours | Free |
 | [Govern data across an enterprise](https://learn.microsoft.com/en-us/training/paths/govern-data-across-enterprise/) | 3 Hours | Free |
 | [Data engineering with Azure Databricks](https://learn.microsoft.com/en-us/training/paths/data-engineer-azure-databricks/) | 5 Hours | Free |
+| **[Practice Exam Questions](https://www.examtopics.com/exams/microsoft/dp-203/)** | 275 Questions | Free |
 
 **Exam Details:**
 | Domain | Details | % of Exam |
