added JS info pages and node js info page

--- a/pages/Javascript/Arrow_Functions.mdx
+++ b/pages/Javascript/Arrow_Functions.mdx
@@ -30,7 +30,7 @@ Arrow functions cannot use yield within their body and cannot be created as gene
 a => a + 100;
 ```
 
-## General Arrow Function from
+## General Arrow Function form
 
 ```js copy
 const func = () => ({ foo: 1 });
