Completed Egg White Bagel Sandwich Recipe

--- a/pages/Fitness/Recipes/Egg_White_Bagel.mdx
+++ b/pages/Fitness/Recipes/Egg_White_Bagel.mdx
@@ -3,25 +3,45 @@
 
 ## Macros
 
-Servings: 
-Calories/Serving: 
-Protein/Serving: 
-Carbs/Serving: 
-Fat/Serving: 
+Servings: 1
+Calories/Serving: 555
+Protein/Serving: 36g
+Carbs/Serving: 62g
+Fat/Serving: 15.5g
 
 ## Ingredients
 
-| Item | Weight (g) | Protein (g) | Carbs (g) | Fat (g) |
-| ----------- | ----------- | ----------- |	----------- | ----------- |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
+| Item | Qty/Weight (g/oz) | Protein (g) | Carbs (g) | Fat (g) | Calories |
+| ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
+| Everything Bagel | 1 | 9g | 62g | 1.5g | 310 |
+| Egg Whites | 8 oz | 25g | 0g | 0g | 125 |
+| Olive Oil | 1 Tbsp | 0g | 0g | 14g | 120 |
+| Red Chilli Powder | 2 tsp | 0g | 0g | 0g | 0 |
+| Salt | 1 tsp | 0g | 0g | 0g | 0 |
+| Crushed Red Pepper | 1 tsp | 0g | 0g | 0g | 0 |
+| Cayenne Pepper | 1 tsp | 0g | 0g | 0g | 0 |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+| Totals |  | 36g | 62g | 15.5g | 555 |
+
+**Brands:** 
+[Whole Foods Everything Bagel](https://www.wholefoodsmarket.com/product/bagel-everything-b08pwshzp2)
+[365 Organic Outdoor Access Egg Whites](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-cage-free-liquid-egg-whites-16-oz-b074h5m1pm)
+[Terra Delyssa Tunisian Organic Extra Virgin Olive Oil](https://www.recipal.com/ingredients/158153-nutrition-facts-calories-protein-carbs-fat-terra-delyssa-organic-extra-virgin-olive-oil)
+
+**Substitions**
+Swap Olive Oil for:
+
 
 ## Instructions
+
+**Prep:**
+1. Slice bagel in half
+2. Add 8oz of egg whites to bowl
+3. Add Salt, Cayenne Papper, Red Chilli Powder, and Crushed Chili Flakes and whisk until combined
+
+**Cooking:**
+1. Toast both peices in a pan
+2. Add 1 Tbsp olive oil and heat for 30 seconds
+3. Add egg white mixure and cool on medium high heat until done
+4. Add cooked egg whites onto bagel and make your sandwich
