--- a/pages/Fitness/Recipes/Template.mdx
+++ b/pages/Fitness/Recipes/Template.mdx
@@ -14,17 +14,19 @@ Fat/Serving:
 
 ## Ingredients
 
-| Item | Weight (g) | Protein (g) | Carbs (g) | Fat (g) |
-| ----------- | ----------- | ----------- |	----------- | ----------- |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
+| Item | Weight (g) | Protein (g) | Carbs (g) | Fat (g) | Calories |
+| ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+| Totals |  |  |  |  |  |
+
+**Brands:** 
 
 ## Instructions
