Added Chicken Biryani and updated bagel sandwich pages

--- a/pages/Fitness/Recipes/Egg_White_Bagel.mdx
+++ b/pages/Fitness/Recipes/Egg_White_Bagel.mdx
@@ -3,15 +3,21 @@
 
 ## Macros
 
-Servings: 1
-Calories/Serving: 555
-Protein/Serving: 36g
-Carbs/Serving: 62g
-Fat/Serving: 15.5g
+Servings: 1 
+- Calories: 555
+- Protein: 36g
+- Carbs: 62g
+- Fat: 15.5g
+
+| ----------- | ----------- | 
+| Calories | 555 |
+| Protein | 36g |
+| Carbs | 62g |
+| Fat | 15.5g |
 
 ## Ingredients
 
-| Item | Qty/Weight (g/oz) | Protein (g) | Carbs (g) | Fat (g) | Calories |
+| Item | Qty/Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
 | ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
 | Everything Bagel | 1 | 9g | 62g | 1.5g | 310 |
 | Egg Whites | 8 oz | 25g | 0g | 0g | 125 |
@@ -21,16 +27,16 @@ Fat/Serving: 15.5g
 | Crushed Red Pepper | 1 tsp | 0g | 0g | 0g | 0 |
 | Cayenne Pepper | 1 tsp | 0g | 0g | 0g | 0 |
 |  |  |  |  |  |  |
-|  |  |  |  |  |  |
 | Totals |  | 36g | 62g | 15.5g | 555 |
 
-**Brands:** 
-[Whole Foods Everything Bagel](https://www.wholefoodsmarket.com/product/bagel-everything-b08pwshzp2)
-[365 Organic Outdoor Access Egg Whites](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-cage-free-liquid-egg-whites-16-oz-b074h5m1pm)
-[Terra Delyssa Tunisian Organic Extra Virgin Olive Oil](https://www.recipal.com/ingredients/158153-nutrition-facts-calories-protein-carbs-fat-terra-delyssa-organic-extra-virgin-olive-oil)
+**Nutrition Reference:** 
+[Whole Foods Everything Bagel](https://www.wholefoodsmarket.com/product/bagel-everything-b08pwshzp2) 
+[365 Organic Outdoor Access Egg Whites](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-cage-free-liquid-egg-whites-16-oz-b074h5m1pm) 
+[Terra Delyssa Tunisian Organic Extra Virgin Olive Oil](https://www.recipal.com/ingredients/158153-nutrition-facts-calories-protein-carbs-fat-terra-delyssa-organic-extra-virgin-olive-oil) 
 
 **Substitions**
 Swap Olive Oil for:
+[Find suitable low calorie replacement]
 
 
 ## Instructions
