--- a/pages/Fitness/Recipes/Macros.mdx
+++ b/pages/Fitness/Recipes/Macros.mdx
@@ -4,7 +4,7 @@
 
 **Starting Date: May 29, 2023**
 
-- Daily Caloric Intake = ~2400 Calories
-- Protein = 240g
-- Carbohydrates = 
-- Fat = 
+- Daily Caloric Intake (DCI) = ~2400 Calories
+- Protein = 45%(DCI) = 240g
+- Carbohydrates = 40%(DCI) = 240g
+- Fat = 15%(DCI) = 40g
