--- a/pages/Fitness/Recipes/Template.mdx
+++ b/pages/Fitness/Recipes/Template.mdx
@@ -6,6 +6,12 @@ Note
 
 ## Macros
 
+| ----------- | ----------- | 
+| Calories |  |
+| Protein |  |
+| Carbs |  |
+| Fat |  |
+
 Servings: 
 Calories/Serving: 
 Protein/Serving: 
@@ -14,7 +20,7 @@ Fat/Serving:
 
 ## Ingredients
 
-| Item | Weight (g) | Protein (g) | Carbs (g) | Fat (g) | Calories |
+| Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
 | ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
@@ -27,6 +33,6 @@ Fat/Serving:
 |  |  |  |  |  |  |
 | Totals |  |  |  |  |  |
 
-**Brands:** 
+**Nutrition Reference:** 
 
 ## Instructions
