updating macros tables

--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -5,12 +5,13 @@ This recipe is totally built from the ground up that I devised to meet the macro
 ## Macros
 
 Servings: 1
-Calories: 
-Protein: 
-Carbs: 
-Fat: 
+Calories: 960
+Protein: 78.1g
+Carbs: 93.5g
+Fat: 37.1g
 
-| ----------- | ----------- | % of Total |
+| Item | Measurement | % of Total |
+| ----------- | ----------- | ----------- |
 | Calories | 960 | 40% |
 | Protein | 78.1g | 32.5% |
 | Carbs | 93.5g | 35% |
