--- a/pages/Fitness/Recipes/Egg_White_Bagel.mdx
+++ b/pages/Fitness/Recipes/Egg_White_Bagel.mdx
@@ -9,11 +9,12 @@ Servings: 1
 - Carbs: 62g
 - Fat: 15.5g
 
-| ----------- | ----------- | 
-| Calories | 555 |
-| Protein | 36g |
-| Carbs | 62g |
-| Fat | 15.5g |
+| Item | Measurement | % of Total |
+| ----------- | ----------- | ----------- |
+| Calories | 555 | 23% |
+| Protein | 36g | 15% |
+| Carbs | 62g | 23% |
+| Fat | 15.5g | 39% |
 
 ## Ingredients
 
