--- a/pages/Fitness/Recipes/Template.mdx
+++ b/pages/Fitness/Recipes/Template.mdx
@@ -6,11 +6,12 @@ Note
 
 ## Macros
 
-| ----------- | ----------- | 
-| Calories |  |
-| Protein |  |
-| Carbs |  |
-| Fat |  |
+| Item | Measurement | % of Total |
+| ----------- | ----------- | ----------- |
+| Calories |  |  |
+| Protein |  |  |
+| Carbs |  |  |
+| Fat |  |  |
 
 Servings: 
 Calories/Serving: 
