small tweaks on recipe pages

--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -4,13 +4,9 @@ This recipe is totally built from the ground up that I devised to meet the macro
 
 ## Macros
 
-Servings: 1
-Calories: 960
-Protein: 78.1g
-Carbs: 93.5g
-Fat: 37.1g
+**Serving Size = 1**
 
-| Item | Measurement | % of Total |
+| Item | Measurement | % of Total (2400) |
 | ----------- | ----------- | ----------- |
 | Calories | 960 | 40% |
 | Protein | 78.1g | 32.5% |
