--- a/pages/Fitness/Recipes/Egg_White_Bagel.mdx
+++ b/pages/Fitness/Recipes/Egg_White_Bagel.mdx
@@ -3,13 +3,9 @@
 
 ## Macros
 
-Servings: 1 
-- Calories: 555
-- Protein: 36g
-- Carbs: 62g
-- Fat: 15.5g
+**Serving Size = 1**
 
-| Item | Measurement | % of Total |
+| Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
 | Calories | 555 | 23% |
 | Protein | 36g | 15% |
