--- a/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
+++ b/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
@@ -2,6 +2,15 @@
 
 ## Macros
 
+**Serving Size = 1**
+
+| Item | Measurement | % of Total Calories (2400) |
+| ----------- | ----------- | ----------- |
+| Calories |  |  |
+| Protein |  |  |
+| Carbs |  |  |
+| Fat |  |  |
+
 Servings: 
 Calories/Serving: 
 Protein/Serving: 
@@ -10,17 +19,19 @@ Fat/Serving:
 
 ## Ingredients
 
-| Item | Weight (g) | Protein (g) | Carbs (g) | Fat (g) |
-| ----------- | ----------- | ----------- |	----------- | ----------- |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
-|  |  |  |  |  |
+| Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
+| ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+|  |  |  |  |  |  |
+| Totals |  |  |  |  |  |
+
+**Nutrition Reference:** 
 
 ## Instructions
