--- a/pages/Fitness/Recipes/Template.mdx
+++ b/pages/Fitness/Recipes/Template.mdx
@@ -6,7 +6,9 @@ Note
 
 ## Macros
 
-| Item | Measurement | % of Total |
+**Serving Size = 1**
+
+| Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
 | Calories |  |  |
 | Protein |  |  |
