minor table fixes

--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -6,7 +6,7 @@ This recipe is totally built from the ground up that I devised to meet the macro
 
 **Serving Size = 1**
 
-| Item | Measurement | % of Total (2400) |
+| Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
 | Calories | 960 | 40% |
 | Protein | 78.1g | 32.5% |
@@ -22,25 +22,25 @@ This recipe is totally built from the ground up that I devised to meet the macro
 | Jalapeno | 14g | 0.1g | 0.5g | 0g | 4 |
 | Serrano | 1 cup | 2g | 7g | 0.5g | 34 |
 | Garlic | 4 cloves | 2g | 12g | 0g | 52 |
-| White Basmati Rice | 1 cup (210g) | 4g | 46g | 0.5g | 210 |
+| White Basmati Rice | 1 cup (163g) | 4g | 46g | 0.5g | 210 |
 | Chicken Stock | 1 cup | 1g | 0g | 0g | 5 |
 | Olive Oil | 2Tbsp | 0g | 0g | 28g | 240 |
 |  |  |  |  |  |  |
-| Totals |  | 78.1 | 93.5 | 37.1g | 960 |
+| Totals |  | 78.1g | 93.5g | 37.1g | 960 |
 
 Add spices by taste - Cumin, Red Pepper, Salt, Turmeric, any Biryani Spice Packets
 
 **Nutrition Reference:**
-[365 Organic Chicken Broth](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-broth-chicken-low-sodium-48-fl-oz-b074v3v1yg)
-[Basmati Rice](https://www.webmd.com/diet/health-benefits-basmati-rice)
-[Medium Yellow Onion](https://www.fatsecret.com/calories-nutrition/usda/onions?portionid=34294&portionamount=1.000)
-[Jalapeno](https://www.verywellfit.com/carb-counts-for-jalapeno-peppers-2241796)
-[Serrano](https://www.verywellfit.com/serrano-pepper-nutrition-facts-4589479)
-[Single Clove of Garlic](https://www.urmc.rochester.edu/encyclopedia/content.aspx?contenttypeid=76&contentid=11215-4)
-[1 lb Chicken Breast](https://www.myfitnesspal.com/food/calories/1-lb-chicken-breast-446675184)
+[365 Organic Chicken Broth](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-broth-chicken-low-sodium-48-fl-oz-b074v3v1yg) 
+[Basmati Rice](https://www.webmd.com/diet/health-benefits-basmati-rice) 
+[Medium Yellow Onion](https://www.fatsecret.com/calories-nutrition/usda/onions?portionid=34294&portionamount=1.000) 
+[Jalapeno](https://www.verywellfit.com/carb-counts-for-jalapeno-peppers-2241796) 
+[Serrano](https://www.verywellfit.com/serrano-pepper-nutrition-facts-4589479) 
+[Single Clove of Garlic](https://www.urmc.rochester.edu/encyclopedia/content.aspx?contenttypeid=76&contentid=11215-4) 
+[1 lb Chicken Breast](https://www.myfitnesspal.com/food/calories/1-lb-chicken-breast-446675184) 
 
-**Substitions**
-Swap Olive Oil for:
+**Substitions** 
+Swap Olive Oil for: 
 [Find suitable low calorie replacement]
 
 ## Instructions
@@ -71,3 +71,21 @@ Swap Olive Oil for:
         - add a few more minutes cooking time before stirring
 
 That's it.
+
+## Multiple Servings
+To make multiple servings at a time, just multiply every gram amount by the number of servings you'd like to make.
+
+**3 Serving Example**
+
+| Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
+| ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
+| Chicken Breast | 1.5 lb (681g) | 210g | 0g | 24.3g | 1122 |
+| Medium Yellow Onion | 3 | 3g | 33g | 0g | 138 |
+| Jalapeno | 3 (42g) | 0.3g | 1.5g | 0g | 12 |
+| Serrano | 3 (42g) | 6g | 21g | 1.5g | 102 |
+| Garlic | 12 cloves | 6g | 36g | 0g | 156 |
+| White Basmati Rice | 3 cup (489g) | 12g | 138g | 1.5g | 630 |
+| Chicken Stock | 3 cup | 3g | 0g | 0g | 15 |
+| Olive Oil | 6 Tbsp | 0g | 0g | 84g | 720 |
+|  |  |  |  |  |  |
+| Totals |  | 78.1g | 93.5g | 37.1g | 2895 |
