--- a/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
+++ b/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
@@ -30,7 +30,7 @@ Fat/Serving:
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
-| Totals |  |  |  |  |  |
+| Totals |  | g | g | g |  |
 
 **Nutrition Reference:** 
 
