--- a/pages/Fitness/Recipes/Template.mdx
+++ b/pages/Fitness/Recipes/Template.mdx
@@ -34,7 +34,7 @@ Fat/Serving:
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
-| Totals |  |  |  |  |  |
+| Totals |  | g | g | g |  |
 
 **Nutrition Reference:** 
 
