updated page format

--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -30,22 +30,22 @@ This recipe is totally built from the ground up that I devised to meet the macro
 
 Add spices by taste - Cumin, Red Pepper, Salt, Turmeric, any Biryani Spice Packets
 
-**Nutrition Reference:**
-[365 Organic Chicken Broth](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-broth-chicken-low-sodium-48-fl-oz-b074v3v1yg) 
-[Basmati Rice](https://www.webmd.com/diet/health-benefits-basmati-rice) 
-[Medium Yellow Onion](https://www.fatsecret.com/calories-nutrition/usda/onions?portionid=34294&portionamount=1.000) 
-[Jalapeno](https://www.verywellfit.com/carb-counts-for-jalapeno-peppers-2241796) 
-[Serrano](https://www.verywellfit.com/serrano-pepper-nutrition-facts-4589479) 
-[Single Clove of Garlic](https://www.urmc.rochester.edu/encyclopedia/content.aspx?contenttypeid=76&contentid=11215-4) 
-[1 lb Chicken Breast](https://www.myfitnesspal.com/food/calories/1-lb-chicken-breast-446675184) 
+## Nutrition Reference
+- [365 Organic Chicken Broth](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-broth-chicken-low-sodium-48-fl-oz-b074v3v1yg)  
+- [Basmati Rice](https://www.webmd.com/diet/health-benefits-basmati-rice) 
+- [Medium Yellow Onion](https://www.fatsecret.com/calories-nutrition/usda/onions?portionid=34294&portionamount=1.000) 
+- [Jalapeno](https://www.verywellfit.com/carb-counts-for-jalapeno-peppers-2241796) 
+- [Serrano](https://www.verywellfit.com/serrano-pepper-nutrition-facts-4589479) 
+- [Single Clove of Garlic](https://www.urmc.rochester.edu/encyclopedia/content.aspx?contenttypeid=76&contentid=11215-4) 
+- [1 lb Chicken Breast](https://www.myfitnesspal.com/food/calories/1-lb-chicken-breast-446675184) 
 
-**Substitions** 
+## Substitions
 Swap Olive Oil for: 
 [Find suitable low calorie replacement]
 
 ## Instructions
 
-**Prep:**
+### Prep
 1. Wash Rice three times
 2. Soak rice in warm water for 30 minutes
 3. Slice onions
@@ -53,7 +53,7 @@ Swap Olive Oil for:
 5. Slice Garlic
 6. Cut chicken breast into 2 inch long strips or cubes, pick one method for even cooking
 
-**Cooking:**
+### Cooking
 1. Heat olive oil in pan
 2. Throw in sliced onions and let brown on medium Heat
 3. Add Turmeric, Red Pepper, Salt, and Cumin
@@ -75,7 +75,7 @@ That's it.
 ## Multiple Servings
 To make multiple servings at a time, just multiply every gram amount by the number of servings you'd like to make.
 
-**3 Serving Example**
+### 3 Serving Example
 
 | Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
 | ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
