--- a/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
+++ b/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
@@ -11,12 +11,6 @@
 | Carbs |  |  |
 | Fat |  |  |
 
-Servings: 
-Calories/Serving: 
-Protein/Serving: 
-Carbs/Serving: 
-Fat/Serving: 
-
 ## Ingredients
 
 | Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
@@ -32,6 +26,14 @@ Fat/Serving:
 |  |  |  |  |  |  |
 | Totals |  | g | g | g |  |
 
-**Nutrition Reference:** 
+## Nutrition Reference
+
+## Substitions
 
 ## Instructions
+
+### Prep
+
+### Cooking
+
+## Multiple Servings
