--- a/pages/Fitness/Recipes/Egg_White_Bagel.mdx
+++ b/pages/Fitness/Recipes/Egg_White_Bagel.mdx
@@ -26,25 +26,28 @@
 |  |  |  |  |  |  |
 | Totals |  | 36g | 62g | 15.5g | 555 |
 
-**Nutrition Reference:** 
-[Whole Foods Everything Bagel](https://www.wholefoodsmarket.com/product/bagel-everything-b08pwshzp2) 
-[365 Organic Outdoor Access Egg Whites](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-cage-free-liquid-egg-whites-16-oz-b074h5m1pm) 
-[Terra Delyssa Tunisian Organic Extra Virgin Olive Oil](https://www.recipal.com/ingredients/158153-nutrition-facts-calories-protein-carbs-fat-terra-delyssa-organic-extra-virgin-olive-oil) 
+## Nutrition Reference
+- [Whole Foods Everything Bagel](https://www.wholefoodsmarket.com/product/bagel-everything-b08pwshzp2) 
+- [365 Organic Outdoor Access Egg Whites](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-cage-free-liquid-egg-whites-16-oz-b074h5m1pm) 
+- [Terra Delyssa Tunisian Organic Extra Virgin Olive Oil](https://www.recipal.com/ingredients/158153-nutrition-facts-calories-protein-carbs-fat-terra-delyssa-organic-extra-virgin-olive-oil) 
 
-**Substitions**
-Swap Olive Oil for:
-[Find suitable low calorie replacement]
-
+## Substitions 
+Swap Olive Oil for: 
+[Find suitable low calorie replacement] 
 
 ## Instructions
 
-**Prep:**
+### Prep
 1. Slice bagel in half
 2. Add 8oz of egg whites to bowl
 3. Add Salt, Cayenne Papper, Red Chilli Powder, and Crushed Chili Flakes and whisk until combined
 
-**Cooking:**
+### Cooking
 1. Toast both peices in a pan
 2. Add 1 Tbsp olive oil and heat for 30 seconds
 3. Add egg white mixure and cool on medium high heat until done
 4. Add cooked egg whites onto bagel and make your sandwich
+
+## Multiple Servings
+
+Not applicable, it's easy enough to cook this day of.
