--- a/pages/Fitness/Recipes/Template.mdx
+++ b/pages/Fitness/Recipes/Template.mdx
@@ -15,12 +15,6 @@ Note
 | Carbs |  |  |
 | Fat |  |  |
 
-Servings: 
-Calories/Serving: 
-Protein/Serving: 
-Carbs/Serving: 
-Fat/Serving: 
-
 ## Ingredients
 
 | Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
@@ -36,6 +30,14 @@ Fat/Serving:
 |  |  |  |  |  |  |
 | Totals |  | g | g | g |  |
 
-**Nutrition Reference:** 
+## Nutrition Reference
+
+## Substitions
 
 ## Instructions
+
+### Prep
+
+### Cooking
+
+## Multiple Servings
