updated macros table

--- a/pages/Fitness/Recipes/Macros.mdx
+++ b/pages/Fitness/Recipes/Macros.mdx
@@ -4,7 +4,9 @@
 
 **Starting Date: May 29, 2023**
 
-- Daily Caloric Intake (DCI) = ~2400 Calories
-- Protein = 45%(DCI) = 240g
-- Carbohydrates = 40%(DCI) = 240g
-- Fat = 15%(DCI) = 40g
+| Item | Measurement | % of Total Calories (2400) |
+| ----------- | ----------- | ----------- |
+| Daily Caloric Intake (DCI) |  ~2400 Calories | 100% |
+| Protein | 240g | 40% |
+| Carbs | 270g | 45% |
+| Fat | 40g | 15% |
