small udpate to biryani page

--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -28,7 +28,7 @@ This recipe is totally built from the ground up that I devised to meet the macro
 |  |  |  |  |  |  |
 | Totals |  | 78.1g | 93.5g | 37.1g | 960 |
 
-Add spices by taste - Cumin, Red Pepper, Salt, Turmeric, any Biryani Spice Packets
+Add spices by taste - Cumin, Red Chili Powder, Salt, Turmeric, and Biryani Spice Packets
 
 ## Nutrition Reference
 - [365 Organic Chicken Broth](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-broth-chicken-low-sodium-48-fl-oz-b074v3v1yg)  
@@ -46,17 +46,17 @@ Swap Olive Oil for:
 ## Instructions
 
 ### Prep
-1. Wash Rice three times
+1. Wash rice three times
 2. Soak rice in warm water for 30 minutes
 3. Slice onions
 4. Slice peppers
-5. Slice Garlic
+5. Slice garlic
 6. Cut chicken breast into 2 inch long strips or cubes, pick one method for even cooking
 
 ### Cooking
 1. Heat olive oil in pan
-2. Throw in sliced onions and let brown on medium Heat
-3. Add Turmeric, Red Pepper, Salt, and Cumin
+2. Throw in sliced onions and let brown on medium heat
+3. Add Turmeric, Red Chili, Salt, and Cumin
 4. After one minute, add in sliced Jalapeno and Serrano peppers
 5. After 2 minutes add in Garlic and Ginger and if you have Garlic Ginger Paste
 6. After 2 minutes add chicken and let sear for 5 minutes while stirring
